--- a/BMI_app/index.html
+++ b/BMI_app/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My BMI App</title>
+    <title>BMI App</title>
 </head>
 <body>
-    <h1>Welcome to My BMI App</h1>
+    <h1>BMI App</h1>
     <form id="myForm">
         <label for="height">身長を入力してください[m]:</label>
         <input type="text" id="height" name="height">
@@ -15,6 +15,7 @@
     </form>
     <button type="button" onclick="calcBMI()">送信</button>
     <p id="result"></p>
+    <p id="classification"></p>
     
     <script src="script.js"></script>
 </body>
